--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: FailBot
+title: GolfBuddy
 description: A starter template for a Jeykll site using the Just the Docs theme!
 theme: just-the-docs
 
